tests/typing/bad/testfile-duplicate-5.go
package main

import "fmt"
func foo() { var x int; fmt.Print(x); x := 1; fmt.Print(x) }
func main() {}
